--- a/Capstone_Final_Project.ipynb
+++ b/Capstone_Final_Project.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 877
         },
-        "outputId": "45eb207e-a463-4878-dcea-0b81fb7b94f4"
+        "outputId": "498ae488-61c5-4a92-96cf-ddf3c5d1244b"
       },
       "source": [
         "  #This data was gathered from an open public source via the City of Madison's Database:http://data-cityofmadison.opendata.arcgis.com/datasets/neighborhood-plans\n",
@@ -57,9 +57,13 @@
         "df_msn_neighborhood = pd.read_csv('/tmp/Neighborhood_Plans.csv').drop(['OBJECTID_1','OBJECTID','Status','Year','SHAPE_Leng','Link','ShapeSTAre','ShapeSTLen'], axis=1)\n",
         "\n",
         "    #rename the columns for easier referencing in the project.\n",
-        "df_msn_neighborhood.rename(columns={'Y':'Latitude','X':'Longitude','PlanName':'Neighborhood'}, inplace=True)\n"
+        "df_msn_neighborhood.rename(columns={'Y':'Latitude','X':'Longitude','PlanName':'Neighborhood'}, inplace=True)\n",
+        "\n",
+        "df_msn_neighborhood[\"Neighborhood\"]= df_msn_neighborhood[\"Neighborhood\"].str.replace('Neighborhood', '')\n",
+        "df_msn_neighborhood[\"Neighborhood\"]= df_msn_neighborhood[\"Neighborhood\"].str.replace('Plan', '')\n",
+        "df_msn_neighborhood\n"
       ],
-      "execution_count": 20,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,145 +97,145 @@
               "      <th>0</th>\n",
               "      <td>-89.341014</td>\n",
               "      <td>43.098683</td>\n",
-              "      <td>Schenk-Atwood-Starkweather-Worthington Park Ne...</td>\n",
+              "      <td>Schenk-Atwood-Starkweather-Worthington Park</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>-89.372108</td>\n",
               "      <td>43.086926</td>\n",
-              "      <td>Tenney-Lapham-Old Market Neighborhood Plan</td>\n",
+              "      <td>Tenney-Lapham-Old Market</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>-89.358018</td>\n",
               "      <td>43.087919</td>\n",
-              "      <td>Marquette-Schenk-Atwood Neighborhood Plan</td>\n",
+              "      <td>Marquette-Schenk-Atwood</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>-89.409940</td>\n",
               "      <td>43.061988</td>\n",
-              "      <td>Brittingham-Vilas Neighborhood Plan</td>\n",
+              "      <td>Brittingham-Vilas</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>-89.390866</td>\n",
               "      <td>43.054009</td>\n",
-              "      <td>Bay Creek Neighborhood Plan</td>\n",
+              "      <td>Bay Creek</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>-89.346647</td>\n",
               "      <td>43.048048</td>\n",
-              "      <td>Broadway-Simpson-Waunona Neighborhood Plan</td>\n",
+              "      <td>Broadway-Simpson-Waunona</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>-89.456386</td>\n",
               "      <td>43.027492</td>\n",
-              "      <td>Allied-Dunn's Marsh Neighborhood Plan</td>\n",
+              "      <td>Allied-Dunn's Marsh</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>-89.329012</td>\n",
               "      <td>43.113940</td>\n",
-              "      <td>Carpenter-Ridgeway-Hawthorne-Truax Neighborhoo...</td>\n",
+              "      <td>Carpenter-Ridgeway-Hawthorne-Truax</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
               "      <td>-89.488393</td>\n",
               "      <td>43.045119</td>\n",
-              "      <td>Southwest Neighborhood Plan</td>\n",
+              "      <td>Southwest</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>-89.384803</td>\n",
               "      <td>43.051256</td>\n",
-              "      <td>South Madison Neighborhood Plan</td>\n",
+              "      <td>South Madison</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
               "      <td>-89.474321</td>\n",
               "      <td>43.081871</td>\n",
-              "      <td>Spring Harbor Neighborhood Plan</td>\n",
+              "      <td>Spring Harbor</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>11</th>\n",
               "      <td>-89.404887</td>\n",
               "      <td>43.062604</td>\n",
-              "      <td>Greenbush Plan</td>\n",
+              "      <td>Greenbush</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>12</th>\n",
               "      <td>-89.366654</td>\n",
               "      <td>43.127063</td>\n",
-              "      <td>Northport Warner Park Sherman Neighborhood Plan</td>\n",
+              "      <td>Northport Warner Park Sherman</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>13</th>\n",
               "      <td>-89.453967</td>\n",
               "      <td>43.028905</td>\n",
-              "      <td>Allied-Dunn's Marsh-Belmar Neighborhoods Physi...</td>\n",
+              "      <td>Allied-Dunn's Marsh-Belmar s Physical Improvem...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>14</th>\n",
               "      <td>-89.404971</td>\n",
               "      <td>43.069014</td>\n",
-              "      <td>Regent Street - South Campus Plan</td>\n",
+              "      <td>Regent Street - South Campus</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>15</th>\n",
               "      <td>-89.303949</td>\n",
               "      <td>43.102335</td>\n",
-              "      <td>Hiestand Neighborhood Plan</td>\n",
+              "      <td>Hiestand</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>16</th>\n",
               "      <td>-89.457989</td>\n",
               "      <td>43.051803</td>\n",
-              "      <td>Midvale Heights\\Westmorland Joint Neighborhood...</td>\n",
+              "      <td>Midvale Heights\\Westmorland Joint</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>17</th>\n",
               "      <td>-89.357813</td>\n",
               "      <td>43.102251</td>\n",
-              "      <td>Emerson East Eken Park Yahara Neighborhood Plan</td>\n",
+              "      <td>Emerson East Eken Park Yahara</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>18</th>\n",
               "      <td>-89.423833</td>\n",
               "      <td>43.072774</td>\n",
-              "      <td>University Avenue Corridor Plan</td>\n",
+              "      <td>University Avenue Corridor</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>19</th>\n",
               "      <td>-89.459790</td>\n",
               "      <td>43.069368</td>\n",
-              "      <td>University Hill Farms Neighborhood Plan</td>\n",
+              "      <td>University Hill Farms</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>20</th>\n",
               "      <td>-89.445474</td>\n",
               "      <td>43.068053</td>\n",
-              "      <td>Hoyt Park Area Neighborhood Plan</td>\n",
+              "      <td>Hoyt Park Area</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>21</th>\n",
               "      <td>-89.428050</td>\n",
               "      <td>43.030104</td>\n",
-              "      <td>Arbor Hills-Leopold Neighborhood Plan</td>\n",
+              "      <td>Arbor Hills-Leopold</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>22</th>\n",
               "      <td>-89.389322</td>\n",
               "      <td>43.072876</td>\n",
-              "      <td>Downtown Plan</td>\n",
+              "      <td>Downtown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>23</th>\n",
               "      <td>-89.422141</td>\n",
               "      <td>43.060541</td>\n",
-              "      <td>Monroe Street Commercial District Plan</td>\n",
+              "      <td>Monroe Street Commercial District</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>24</th>\n",
@@ -257,30 +261,30 @@
             ],
             "text/plain": [
               "    Longitude   Latitude                                       Neighborhood\n",
-              "0  -89.341014  43.098683  Schenk-Atwood-Starkweather-Worthington Park Ne...\n",
-              "1  -89.372108  43.086926         Tenney-Lapham-Old Market Neighborhood Plan\n",
-              "2  -89.358018  43.087919          Marquette-Schenk-Atwood Neighborhood Plan\n",
-              "3  -89.409940  43.061988                Brittingham-Vilas Neighborhood Plan\n",
-              "4  -89.390866  43.054009                        Bay Creek Neighborhood Plan\n",
-              "5  -89.346647  43.048048         Broadway-Simpson-Waunona Neighborhood Plan\n",
-              "6  -89.456386  43.027492              Allied-Dunn's Marsh Neighborhood Plan\n",
-              "7  -89.329012  43.113940  Carpenter-Ridgeway-Hawthorne-Truax Neighborhoo...\n",
-              "8  -89.488393  43.045119                        Southwest Neighborhood Plan\n",
-              "9  -89.384803  43.051256                    South Madison Neighborhood Plan\n",
-              "10 -89.474321  43.081871                    Spring Harbor Neighborhood Plan\n",
-              "11 -89.404887  43.062604                                     Greenbush Plan\n",
-              "12 -89.366654  43.127063    Northport Warner Park Sherman Neighborhood Plan\n",
-              "13 -89.453967  43.028905  Allied-Dunn's Marsh-Belmar Neighborhoods Physi...\n",
-              "14 -89.404971  43.069014                  Regent Street - South Campus Plan\n",
-              "15 -89.303949  43.102335                         Hiestand Neighborhood Plan\n",
-              "16 -89.457989  43.051803  Midvale Heights\\Westmorland Joint Neighborhood...\n",
-              "17 -89.357813  43.102251    Emerson East Eken Park Yahara Neighborhood Plan\n",
-              "18 -89.423833  43.072774                    University Avenue Corridor Plan\n",
-              "19 -89.459790  43.069368            University Hill Farms Neighborhood Plan\n",
-              "20 -89.445474  43.068053                   Hoyt Park Area Neighborhood Plan\n",
-              "21 -89.428050  43.030104              Arbor Hills-Leopold Neighborhood Plan\n",
-              "22 -89.389322  43.072876                                      Downtown Plan\n",
-              "23 -89.422141  43.060541             Monroe Street Commercial District Plan\n",
+              "0  -89.341014  43.098683      Schenk-Atwood-Starkweather-Worthington Park  \n",
+              "1  -89.372108  43.086926                         Tenney-Lapham-Old Market  \n",
+              "2  -89.358018  43.087919                          Marquette-Schenk-Atwood  \n",
+              "3  -89.409940  43.061988                                Brittingham-Vilas  \n",
+              "4  -89.390866  43.054009                                        Bay Creek  \n",
+              "5  -89.346647  43.048048                         Broadway-Simpson-Waunona  \n",
+              "6  -89.456386  43.027492                              Allied-Dunn's Marsh  \n",
+              "7  -89.329012  43.113940               Carpenter-Ridgeway-Hawthorne-Truax  \n",
+              "8  -89.488393  43.045119                                        Southwest  \n",
+              "9  -89.384803  43.051256                                    South Madison  \n",
+              "10 -89.474321  43.081871                                    Spring Harbor  \n",
+              "11 -89.404887  43.062604                                         Greenbush \n",
+              "12 -89.366654  43.127063                    Northport Warner Park Sherman  \n",
+              "13 -89.453967  43.028905  Allied-Dunn's Marsh-Belmar s Physical Improvem...\n",
+              "14 -89.404971  43.069014                      Regent Street - South Campus \n",
+              "15 -89.303949  43.102335                                         Hiestand  \n",
+              "16 -89.457989  43.051803                Midvale Heights\\Westmorland Joint  \n",
+              "17 -89.357813  43.102251                    Emerson East Eken Park Yahara  \n",
+              "18 -89.423833  43.072774                        University Avenue Corridor \n",
+              "19 -89.459790  43.069368                            University Hill Farms  \n",
+              "20 -89.445474  43.068053                                   Hoyt Park Area  \n",
+              "21 -89.428050  43.030104                              Arbor Hills-Leopold  \n",
+              "22 -89.389322  43.072876                                          Downtown \n",
+              "23 -89.422141  43.060541                 Monroe Street Commercial District \n",
               "24 -89.370387  43.084398           East Washington Capitol Gateway Corridor\n",
               "25 -89.309473  43.076960              Stoughton Road Revitalization Project\n",
               "26 -89.397318  43.052813                                 Wingra Creek Build"
@@ -289,7 +293,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 27
         }
       ]
     },
