--- a/Capstone_Final_Project.ipynb
+++ b/Capstone_Final_Project.ipynb
@@ -25,6 +25,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8WRkCNe6mf6m",
+        "colab_type": "text"
+      },
+      "source": [
+        "Importing all the Package Dependencies for this project."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "IKX_izv4bWLj",
@@ -41,6 +51,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kxsHIRVKmrLW",
+        "colab_type": "text"
+      },
+      "source": [
+        "Reading in the coverted neighborhood location data."
+      ]
     },
     {
       "cell_type": "code",
@@ -68,6 +88,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GO7jdCvem6S_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Setting the location position for the Map below."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Q9Q0Wm0Yb-wL",
@@ -85,6 +115,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iZs7FryinHcd",
+        "colab_type": "text"
+      },
+      "source": [
+        "Creating the URLs that will be passed to the Foursquare API"
+      ]
     },
     {
       "cell_type": "code",
@@ -130,6 +170,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gy1MKggwnmk1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Calling the Foursquare API by passing in the URL. Each .JSON object is parsed for the relevant information and is stored in a dataframe."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1DbYtM5dLYOV",
@@ -165,6 +215,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9g9pDX1ZnrY7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Creating the folium map, and adding the markers and coverage."
+      ]
     },
     {
       "cell_type": "code",
